// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid-action 1`] = `
- Resolving entry point
✔ Resolving entry point (<elapsedTime>)
- Resolving build manifests
✖ Invalid 'action.yml':
  .runs.main: Expected a string (got undefined)
  .runs.using: Expected a valid enumeration value (got an empty string)
`;

exports[`invalid-entry 1`] = `
- Resolving entry point
✖ Failed to resolve entry point.
  Checked:
  - src/index.tsx
  - src/index.ts
  - src/index.esm
  - src/index.js
`;

exports[`invalid-manifest 1`] = `
- Resolving entry point
✔ Resolving entry point (<elapsedTime>)
- Resolving build manifests
✖ Manifest file (package.json or action.yml) not found.
`;
